2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* help/eu/eu.po: Added Basque translation.
	* help/Makefile.am: Added 'eu' to DOC_LINGUAS.

2009-02-08  Mario Blättermann  <mariobl@svn.gnome.org>

	* help/de/de.po: Added German translation
	* help/Makefile.am: Added de to DOC_LINGUAS.

==================== 2.25.90 ======================

==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* gswitchit-applet.c: (GSwitchItAppletSetupGroupsSubmenu):
	Fix a typo in the last commit which prevented the build to complete.

2008-11-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 428072 – leaks bonobo ui nodes
	
	* gswitchit-applet.c (GSwitchItAppletSetupGroupsSubmenu): Don't
	leak the BonoboUINode.

==================== 2.24.0.1 ====================

2008-09-02  Callum McKenzie  <callum@spooky-possum.org>

	* gswitchit-applet.c: Patch from Matthias Clasen to fix a memory
	leak. Bug 549890.

2008-04-28  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: a bit of code cleanup, thanks to Yuriy,
	http://bugzilla.gnome.org/show_bug.cgi?id=529760

2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* gswitchit-applet.c: C89 compilation fix from Jens Granseuer (see
	bug #529246).

2008-04-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: fixed email

2008-04-05  Ilkka Tuohela <hile@iki.fi>

	* help/fi: Added Finnish translation by Jukka Heikkilä.

2008-03-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: updating from deprecated function (bug #523704)

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* gswitchit.ui
	* Makefile.am
	* gswitchit-applet.c: Convert from glade to
	gtk-builder. Patch from Jaap Haitsma (bug #521082).
