@@ -1,3 +1,7 @@
+2009-02-16  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit-applet.c: removed deprecated symbols, Bug #562520
+
 2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* help/eu/eu.po: Added Basque translation.
